# pi-clipper

./: .gitignore  AGENTS.md  ARCHITECTURE.md  HANDOFF_CLIP_PROBLEM.md  PRD.md  README.md  RULES.md  package-lock.json  package.json  run-verified.bat  run.bat  test_input.txt  verify-clip.bat
config/: default-rules.yaml  default-signatures.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs  tray.rs
src-tauri/src/config/: loader.rs  schema.rs
src-tauri/src/context/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/pipeline/: context.rs  dedupe.rs  logger.rs  mod.rs  observer.rs  sanitizer.rs  watcher.rs  writer.rs
src-tauri/src/rules/: builtins.rs  engine.rs  mod.rs  rule_types.rs
src-tauri/tests/: test_clipboard_integration.rs  test_rules.rs
